--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemailer-sendgrid": "^1.0.3",
+    "stripe": "^11.13.0",
     "uuid-v4": "^0.1.0"
   }
 }
